fix: horizontal overflow body

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,14 @@
+@import "./assets//fonts//fontawesome/scss/fontawesome.scss";
+@import "./assets//fonts//fontawesome/scss/regular.scss";
+@import "./assets//fonts//fontawesome/scss/solid.scss";
+@import "./assets//fonts//fontawesome/scss/brands.scss";
 @import "./globals";
 
 .app {
   width: 100%;
   font-family: "Montserrat";
+}
+
+body {
+  overflow-x: hidden;
 }
