--- a/src/globals.scss
+++ b/src/globals.scss
@@ -5,6 +5,7 @@
   --dark-color: #222;
   --text-color: #000;
   --grey0-colors: #f8f8f8;
+  --red-color: #eb5757;
   --header-z-index: 5;
 }
 
